# shellm

./: .gitignore  README.md  pyproject.toml
scripts/: zsh_plugin.zsh
src/: shellm.py
