[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellm"
description = "LLMs for shell"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.11"
authors = [
    {name = "Ezer Silva", email = "ezersilva@gmail.com"},
]
keywords = ["llm", "shell"]

dependencies = [
    "requests",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "ipdb",
    "devtools",
    "pytest",
    "ruff",
]

[tool.ipdb]
context = 7

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
